<resources>
    <string name="app_name">FifthWeek</string>
    <string name="login_title">Sign In</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_button">Sign In</string>
    <string name="forget_link">Forget Your Password?</string>
    <string name="register_title">Sign Up</string>
    <string name="register_button">Sign Up</string>
    <string name="login_link">Already Have A Account?</string>
    <string name="register_tip">----------------Or Sign Up with---------------</string>
    <string name="register_beef">Beef</string>
    <string name="register_roast_sausage">RoastSausage</string>
    <string name="register_pork">Pork</string>
    <string name="labelOne">labelOne</string>
    <string name="labelTwo">labelTwo</string>
    <string name="labelThree">labelThree</string>
    <string name="labelFour">labelFour</string>
    <string name="labelFive">labelFive</string>
    <string name="labelSix">labelSix</string>
    <string name="labelSeven">labelSeven</string>
    <string name="labelEight">labelEight</string>
    <string name="labelNight">labelNight</string>
    <string name="labelTen">labelTen</string>
    <string name="labelEleven">labelEleven</string>
    <string name="menuTitle">Welcome To Order Food</string>
    <string name="mealTitle">Choose Your Meals</string>
    <string name="mealOne">京酱肉丝(30RMB)</string>
    <string name="mealTwo">土豆肉丝(20RMB)</string>
    <string name="mealThree">糖醋排骨(40RMB)</string>
    <string name="mealFour">红烧剥皮鱼(36RMB)</string>
    <string name="mealFive">酸菜鱼(30RMB)</string>
    <string name="mealSix">啤酒鸭(24RMB)</string>
    <string name="couponTitle">Coupon</string>
    <string name="couponTipOne">Use Coupon</string>
    <string name="couponTipTwo">No Coupon</string>
    <string name="couponNumber">CouponNumber</string>
    <string name="addressTitle">Write Down Your Site</string>
    <string name="addressContext">AddressContext</string>
    <string name="submit">Submit</string>
    <string name="thankForUsing">Thank You For Using</string>
    <string name="mealList">Meal List</string>
</resources>
