<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        tools:context=".MenuActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menuTitle"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp"
                android:text="@string/mealTitle"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:textSize="30sp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <CheckBox
                        android:id="@+id/mealOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/mealOne"/>
                <CheckBox
                        android:id="@+id/mealTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/mealTwo"/>
                <CheckBox
                        android:id="@+id/mealThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/mealThree"/>
        </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <CheckBox
                        android:id="@+id/mealFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/mealFour"/>
                <CheckBox
                        android:id="@+id/mealFive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/mealFive"/>
                <CheckBox
                        android:id="@+id/mealSix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/mealSix"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/couponLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:background="@null">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/couponTitle"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorRed"/>
        <RadioGroup
                android:id="@+id/couponRadioButtonGroup"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                    android:id="@+id/useCouponButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textSize="20sp"
                    android:text="@string/couponTipOne"
                    android:layout_weight="1"/>
            <RadioButton
                    android:id="@+id/noCouponButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/couponTipTwo"
                    android:layout_weight="1"/>
        </RadioGroup>
        <EditText
                android:id="@+id/couponNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:visibility="visible"
                android:hint="@string/couponNumber"
                android:textSize="20sp"
                android:textColorHint="@color/colorSkyblue"
                android:lineSpacingExtra="8sp"
                android:textColor="@color/colorRed"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@null"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/addressTitle"
                android:textSize="30sp"
                android:textColor="@color/colorRed"
                android:textStyle="bold"/>
        <EditText
            android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addressContext"
                android:textSize="20sp"
                android:singleLine="true"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorSkyblue"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="30dp"
            android:background="@null">
        <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/circle_angle_red"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
